# digital_department_lab

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
acl/: policy.conf
migrations/2024-11-17-070621_create_users/: up.sql
migrations/2024-11-23-084633_create_checkpoint/: up.sql
migrations/2024-11-23-091700_create_classes/: down.sql  up.sql
src/: auth.rs  checkpoint.rs  door.rs  main.rs  model.rs  schema.rs  terminal.rs  validate.rs
