[package]
name = "digital_department"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
validator = { version = "0.19", features = ["derive"] }
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }

thiserror = "2"

tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "net"] }

utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

bb8 = "0.8.6"
diesel = { version = "2.2.5", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.1", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
casbin = "2.5.0"
argon2 = "0.5.3"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.0"

